--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Bloggers</a>
+        <a class="navbar-brand" href="/Bootstrap-Blog-Website/">Bloggers</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,10 +33,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/Bootstrap-Blog-Website/"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About</a>
+              <a class="nav-link" href="/Bootstrap-Blog-Website/about.html"
+                >About</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
@@ -62,7 +69,9 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact Us</a>
+              <a class="nav-link" href="/Bootstrap-Blog-Website/contact.html"
+                >Contact Us</a
+              >
             </li>
           </ul>
           <form class="d-flex">
@@ -74,6 +83,21 @@
             />
             <button class="btn btn-outline-light" type="submit">Search</button>
           </form>
+          <div class="mx-sm-auto mx-lg-2 mx-md-auto">
+            <button
+              class="btn btn-danger my-sm-2 my-md-2 mx-lg-2 my-2"
+              data-bs-toggle="modal"
+              data-bs-target="#loginModal"
+            >
+              Login</button
+            ><button
+              class="btn btn-danger"
+              data-bs-toggle="modal"
+              data-bs-target="#signupModal"
+            >
+              SignUp
+            </button>
+          </div>
         </div>
       </div>
     </nav>
