changes on path

--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
           </p>
         </div>
         <div class="col-md-5">
-          <img class="img-fluid" src="/image/about-1.jpg" alt="" />
+          <img class="img-fluid" src="./image/about-1.jpg" alt="" />
         </div>
       </div>
       <div
@@ -149,7 +149,7 @@
           </p>
         </div>
         <div class="col-md-5">
-          <img class="img-fluid" src="/image/about-2.jpg" alt="" />
+          <img class="img-fluid" src="./image/about-2.jpg" alt="" />
         </div>
       </div>
       <div
@@ -177,7 +177,7 @@
           </p>
         </div>
         <div class="col-md-5">
-          <img class="img-fluid" src="/image/about-3.jpg" alt="" />
+          <img class="img-fluid" src="./image/about-3.jpg" alt="" />
         </div>
       </div>
     </div>
